--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 POSTGRES_DB=qtsseum-db
 POSTGRES_USER=root
 POSTGRES_PASSWORD=root
-
-DATABASE_URL=postgres://root:root@db:5432/shrimp-db
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
 
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=root
