add: Registration gRPC client

--- a/src/client/backend/CMakeLists.txt
+++ b/src/client/backend/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(client_backend
     greeter/greeter_client.cpp
+    registration/registration_client.cpp
 )
 
 target_link_libraries(client_backend PUBLIC
