add: auth service, setup uuid_v4 library

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ POSTGRES_PORT=5432
 
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=root
+
+QTSSEUM_JWT_ISSUER=qtsseum
+QTSSEUM_JWT_SECRET=qtsseum-jwt-secret-256128!
+QTSSEUM_JWT_EXP=900
+QTSSEUM_JWT_REF_EXP=259200
