--- a/src/client/backend/CMakeLists.txt
+++ b/src/client/backend/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(client_backend
     greeter/greeter_client.cpp
     registration/registration_client.cpp
+    auth/auth_client.cpp
 )
 
 target_link_libraries(client_backend PUBLIC
