add: utils for verifying JWTs and auth metadata

--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -1,6 +1,12 @@
 add_library(utils
     load_dotenv.cpp
     db_config.cpp
+    verify_jwt.cpp
+    verify_auth.cpp
+)
+
+target_link_libraries(utils PRIVATE
+    jwt-cpp
 )
 
 target_include_directories(utils PRIVATE
