update: rework workers

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ QTSSEUM_JWT_ISSUER=qtsseum
 QTSSEUM_JWT_SECRET=qtsseum-jwt-secret-256128!
 QTSSEUM_JWT_EXP=900
 QTSSEUM_JWT_REF_EXP=259200
+
+TOKEN_SETTINGS_ORG=TalpaSoft
+TOKEN_SETTINGS_APP=Qt-sseum
+TOKEN_REFRESH_KEY=auth/refresh_token
