--- a/src/client/frontend/CMakeLists.txt
+++ b/src/client/frontend/CMakeLists.txt
@@ -30,7 +30,7 @@ target_include_directories(client PRIVATE
 qt_add_qml_module(client
     URI ClientApp
     QML_FILES 
-        qml/Main.qml 
+        qml/App.qml 
         qml/Navigator.qml
         qml/LoginPage.qml
         qml/RegisterPage.qml
