add: Arena service, procedure for getting random opponents

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ add_library(protolib
     ${PROTO_DIR}/auth.proto
     ${PROTO_DIR}/user.proto
     ${PROTO_DIR}/trainer.proto
+    ${PROTO_DIR}/arena.proto
 )
 
 target_link_libraries(protolib PUBLIC
